--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
             width: 100%;
         }
         .logo {
-            max-width: 150px; /* Set the width of the logo */
+            max-width: 300px; /* Set the width of the logo */
             margin-bottom: 20px; /* Space between logo and heading */
+            object-fit: cover; /* Ensures the image covers the container */
+            object-position: left; /* Aligns the image to the left to remove right padding */
         }
         h1 {
             color: #2e7d32; /* Dark green title */
