--- a/index.html
+++ b/index.html
@@ -35,9 +35,21 @@
             font-size: 2em;
             margin-bottom: 20px;
         }
+        .slider-section {
+            background-color: #f1f8e9; /* Light green background for separation */
+            padding: 20px;
+            margin-bottom: 20px;
+            border-radius: 10px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        .slider-label {
+            font-size: 1.2em;
+            color: #388e3c; /* Medium green */
+            margin-bottom: 10px;
+        }
         .slider {
             width: 100%;
-            margin: 20px 0;
+            margin: 10px 0 20px 0;
         }
         .output {
             margin-top: 20px;
@@ -89,13 +101,19 @@
     
     <h1>Pig Waste Converter</h1>
     
-    <!-- Slider for Number of Pigs -->
-    <input type="range" min="1" max="100000" value="23500" class="slider" id="pigSlider">
-    <p>Number of Pigs: <span id="selectedPigs">23,500</span></p>
+    <!-- Section for Pig Slider -->
+    <div class="slider-section">
+        <div class="slider-label">Adjust Number of Pigs:</div>
+        <input type="range" min="1" max="100000" value="23500" class="slider" id="pigSlider">
+        <p>Number of Pigs: <span id="selectedPigs">23,500</span></p>
+    </div>
 
-    <!-- Slider for Price per m³ -->
-    <input type="range" min="0.01" max="1" value="0.10" step="0.01" class="slider" id="priceSlider">
-    <p>Price per m³ of Biomethane: €<span id="selectedPrice">0.10</span></p>
+    <!-- Section for Price per m³ Slider -->
+    <div class="slider-section">
+        <div class="slider-label">Set Price per m³ of Biomethane (€):</div>
+        <input type="range" min="0.01" max="1" value="0.10" step="0.01" class="slider" id="priceSlider">
+        <p>Price per m³ of Biomethane: €<span id="selectedPrice">0.10</span></p>
+    </div>
 
     <!-- Output Section -->
     <div class="output">
