--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <title>Pig Waste Converter</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #e8f5e9; /* Light green background */
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 20px; /* Added padding to prevent cutoff */
+        display: flex;
+        justify-content: center;
+        align-items: flex-start; /* Allow content to flow vertically */
+        min-height: 100vh; /* Ensure page can expand with content */
+        background-color: #e8f5e9; /* Light green background */
+        overflow: auto; /* Enable scrolling on small screens */
         }
         .container {
             background-color: white;
@@ -23,9 +24,10 @@
             text-align: center;
             max-width: 600px;
             width: 100%;
+            margin-bottom: 20px; /* Add margin at the bottom to prevent cutoff */
         }
         .logo {
-            max-width: 300px; /* Set the width of the logo */
+            max-width: 200px; /* Set the width of the logo */
             margin-bottom: 20px; /* Space between logo and heading */
             object-fit: cover; /* Ensures the image covers the container */
             object-position: left; /* Aligns the image to the left to remove right padding */
@@ -90,6 +92,25 @@
             background: #2e7d32;
             cursor: pointer;
             border-radius: 50%;
+        }
+        /* Media query for smaller screens */
+        @media (max-width: 600px) {
+        .container {
+            padding: 20px; /* Reduce padding on smaller screens */
+            max-width: 100%; /* Make container full width */
+        }
+
+        h1 {
+            font-size: 1.5em; /* Reduce title size on small screens */
+        }
+
+        .slider-label {
+            font-size: 1em; /* Reduce label size */
+        }
+
+        .unit {
+            font-size: 1em; /* Reduce output font size */
+        }
         }
     </style>
 </head>
