--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             margin-bottom: 20px; /* Space between logo and heading */
             object-fit: cover; /* Ensures the image covers the container */
             object-position: left; /* Aligns the image to the left to remove right padding */
+            clip-path: inset(0 20% 0 0); /* Crops 20% of the right side */
         }
         h1 {
             color: #2e7d32; /* Dark green title */
