--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             margin-bottom: 20px; /* Add margin at the bottom to prevent cutoff */
         }
         .logo {
+            display: block; /* Make the image behave like a block element */
+            margin: 0 auto; /* Center the image horizontally */
             max-width: 300px; /* Set the width of the logo */
             margin-bottom: 20px; /* Space between logo and heading */
             object-fit: cover; /* Ensures the image covers the container */
